--- a/app/src/main/res/layout/fragment_book.xml
+++ b/app/src/main/res/layout/fragment_book.xml
@@ -27,26 +27,39 @@
           />
 
       <androidx.core.widget.NestedScrollView
+          android:id="@+id/nested_scroll_book"
           android:layout_width="match_parent"
-          android:layout_height="0dp"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="64dp"
+          android:fillViewport="true"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toBottomOf="@+id/searchView"
-          android:fillViewport="true">
+          app:layout_constraintTop_toBottomOf="@+id/searchView">
 
+          <LinearLayout
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:orientation="vertical">
 
-      <androidx.recyclerview.widget.RecyclerView
-          android:id="@+id/recyclerView"
-          android:layout_width="match_parent"
-          android:layout_height="0dp"
-          android:layout_marginStart="8dp"
-          android:layout_marginTop="16dp"
-          android:layout_marginEnd="8dp"
-          app:layout_constraintBottom_toBottomOf="parent"
-          app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toBottomOf="@+id/searchView"
-          tools:listitem="@layout/item_book" />
+              <androidx.recyclerview.widget.RecyclerView
+                  android:id="@+id/rv_book"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:layout_marginStart="8dp"
+                  android:layout_marginTop="16dp"
+                  android:layout_marginEnd="8dp"
+                  android:nestedScrollingEnabled="false"
+                  tools:listitem="@layout/item_book">
+
+              </androidx.recyclerview.widget.RecyclerView>
+
+              <ProgressBar
+                  android:id="@+id/pb_showbook"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:layout_marginBottom="32dp"/>
+          </LinearLayout>
+
       </androidx.core.widget.NestedScrollView>
 
   </androidx.constraintlayout.widget.ConstraintLayout>
