--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -127,6 +127,7 @@
                    app:layout_constraintEnd_toEndOf="@+id/imageView5"
                    app:layout_constraintStart_toStartOf="@+id/imageView5"
                    app:layout_constraintTop_toBottomOf="@+id/imageView5" />
+
            </androidx.constraintlayout.widget.ConstraintLayout>
 
            <TextView
@@ -152,18 +153,26 @@
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
-       <androidx.recyclerview.widget.RecyclerView
-           android:id="@+id/rv_home_book"
+       <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
-           android:layout_marginStart="8dp"
-           android:layout_marginTop="8dp"
-           android:layout_marginEnd="8dp"
+           android:layout_marginTop="16dp"
+           android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
-           app:layout_constraintEnd_toEndOf="parent"
-           app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
-           tools:listitem="@layout/item_book" />
+           tools:layout_editor_absoluteX="33dp">
+
+
+                  <androidx.recyclerview.widget.RecyclerView
+                      android:id="@+id/rv_home_book"
+                      android:layout_width="match_parent"
+                      android:layout_height="0dp"
+                      android:layout_marginStart="8dp"
+                      android:layout_marginTop="8dp"
+                      android:layout_marginEnd="8dp"
+                      tools:listitem="@layout/item_book_home" />
+       </ScrollView>
+
 
    </androidx.constraintlayout.widget.ConstraintLayout>
 
