--- a/app/src/main/res/layout/fragment_recommend.xml
+++ b/app/src/main/res/layout/fragment_recommend.xml
@@ -40,6 +40,7 @@
             app:layout_constraintTop_toTopOf="@+id/imageView3" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_rekomendasi"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
