--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -81,7 +81,7 @@
        app:layout_constraintTop_toBottomOf="@+id/imageView8" >
 
       <Button
-          android:id="@+id/button4"
+          android:id="@+id/btn_change_pass"
           android:layout_width="250dp"
           android:layout_height="wrap_content"
           android:layout_marginTop="16dp"
@@ -95,10 +95,10 @@
           android:textSize="12sp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toBottomOf="@+id/button2" />
+          app:layout_constraintTop_toBottomOf="@+id/btn_change_profile" />
 
       <Button
-          android:id="@+id/button2"
+          android:id="@+id/btn_change_profile"
           android:layout_width="250dp"
           android:layout_height="wrap_content"
           android:layout_marginTop="16dp"
@@ -115,7 +115,7 @@
           app:layout_constraintTop_toTopOf="parent" />
 
       <Button
-          android:id="@+id/button3"
+          android:id="@+id/btn_logout"
           android:layout_width="250dp"
           android:layout_height="wrap_content"
           android:layout_marginTop="16dp"
@@ -129,7 +129,7 @@
           android:textSize="12sp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toBottomOf="@+id/button4" />
+          app:layout_constraintTop_toBottomOf="@+id/btn_change_pass" />
    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
