--- a/app/src/main/res/layout/item_book.xml
+++ b/app/src/main/res/layout/item_book.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:background="#fff"
     app:cardCornerRadius="15dp"
+    android:id="@+id/card_book"
     android:layout_margin="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -13,9 +14,9 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/imageView6"
-            android:layout_width="90dp"
-            android:layout_height="120dp"
+            android:id="@+id/img_cover_book"
+            android:layout_width="70dp"
+            android:layout_height="100dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
@@ -36,7 +37,7 @@
             android:text="Judul Buku"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView6"
+            app:layout_constraintStart_toEndOf="@+id/img_cover_book"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -50,18 +51,7 @@
             app:layout_constraintStart_toStartOf="@+id/list_judul"
             app:layout_constraintTop_toBottomOf="@+id/list_judul" />
 
-        <TextView
-            android:id="@+id/list_rating"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/ic_baseline_star_24"
-            android:fontFamily="@font/montserrat_regular"
-            android:text="4.5"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="@+id/list_judul"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/list_penerbit"
-            app:layout_constraintTop_toBottomOf="@+id/list_judul" />
+
 
         <TextView
             android:id="@+id/list_deskripsi"
