--- a/app/src/main/res/layout/item_book_home.xml
+++ b/app/src/main/res/layout/item_book_home.xml
@@ -1,6 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="95dp"
+    android:layout_height="130dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="8dp"
+    app:cardCornerRadius="10dp"
+    android:id="@+id/card_home">
+ <ImageView
+     android:id="@+id/thumbnail_buku_home"
+     android:layout_width="match_parent"
+     android:layout_height="match_parent"
+     android:alpha="0.5"/>
+    <TextView
+        android:id="@+id/judul_buku_home"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
+        android:fontFamily="@font/montserrat_bold"
+        android:text="Judul Buku"
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
+        android:textSize="9sp"
+        android:maxLength="50"
+        android:layout_gravity="center|bottom"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:drawableLeft="@drawable/ic_baseline_star_24"
+        android:id="@+id/average_home"
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
+        android:textSize="9sp"
+        android:layout_marginBottom="8dp"
+        android:layout_gravity="center|bottom"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
