--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-    <style name="CollapsedAppBar" parent="@android:style/TextAppearance.Medium">
+    <style name="CollapsedAppBar" parent="@android:style/TextAppearance">
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">normal</item>
     </style>
