--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -25,9 +25,18 @@
             android:padding="16dp"
             android:gravity="center">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="UBAH PASSWORD"
+                android:fontFamily="@font/montserrat_bold"
+                android:textColor="@android:color/black"/>
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:id="@+id/old_pass"
+                app:errorEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -40,7 +49,9 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:id="@+id/new_pass"
+                app:errorEnabled="true">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -57,12 +68,15 @@
                     android:fontFamily="@font/montserrat_regular"
                     android:hint="@string/password_baru"
                     android:inputType="textPassword"
-                    android:textSize="12sp" />
+
+                    android:textSize="12sp"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:id="@+id/confirm_pass"
+                app:errorEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -74,6 +88,8 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <Button
+                android:foreground="?attr/selectableItemBackground"
+                android:id="@+id/btn_update_pass"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
