--- a/app/src/main/res/layout/activity_change_profile.xml
+++ b/app/src/main/res/layout/activity_change_profile.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/change_profile"
     tools:context=".activity.ChangeProfileActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -16,24 +17,27 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/fab_image"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:backgroundTint="@color/colorOrange"
             android:src="@drawable/ic_baseline_add_photo_alternate_24"
-            app:layout_constraintBottom_toBottomOf="@+id/circleImageView2"
-            app:layout_constraintEnd_toEndOf="@+id/circleImageView2" />
+            app:layout_constraintBottom_toBottomOf="@+id/image_upload"
+            app:layout_constraintEnd_toEndOf="@+id/image_upload" />
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/circleImageView2"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:id="@+id/image_upload"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:layout_marginTop="16dp"
             android:src="@drawable/bg_detail"
             app:civ_border_color="@android:color/white"
             app:civ_border_width="2dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.cardview.widget.CardView
@@ -58,7 +62,9 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:id="@+id/edit_nama"
+                >
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -71,7 +77,8 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp">
+                android:layout_marginTop="16dp"
+                android:id="@+id/edit_angkatan">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -79,13 +86,15 @@
                     android:fontFamily="@font/montserrat_regular"
                     android:hint="@string/angkatan"
                     android:inputType="number"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp">
+                android:layout_marginTop="16dp"
+                android:id="@+id/edit_nim"
+                >
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -109,9 +118,11 @@
                 style="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:entries="@array/list_fakultas" />
+               android:entries="@array/list_fakultas"
+                android:id="@+id/edit_fakultas"/>
 
             <Button
+                android:id="@+id/btn_save_profil"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -119,6 +130,7 @@
                 android:background="@color/colorOrange"
                 android:fontFamily="@font/montserrat_bold"
                 android:text="Simpan"
+                android:foreground="?attr/selectableItemBackground"
                 android:textColor="@android:color/white" />
         </LinearLayout>
 
