--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -35,12 +35,14 @@
                 android:layout_height="match_parent"
                 android:background="@color/colorOrange"
                 app:layout_collapseMode="parallax" />
+
             <ImageView
                 android:id="@+id/foto_detail"
                 android:layout_width="120dp"
                 android:layout_height="150dp"
                 android:layout_gravity="center"
-                android:layout_marginBottom="20dp" />
+                android:layout_marginBottom="20dp"
+                tools:srcCompat="@tools:sample/avatars" />
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar_detail"
@@ -285,6 +287,15 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/btn_rate" />
 
+            <ProgressBar
+                android:id="@+id/pb_detail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="@+id/rv_ulasan"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="parent" />
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_ulasan"
                 android:layout_width="match_parent"
@@ -295,7 +306,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView17"
-                tools:listitem="@layout/item_ulasan"/>
+                tools:listitem="@layout/item_ulasan" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 
