--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -141,6 +141,7 @@
 
 
             <Button
+                android:foreground="?attr/selectableItemBackground"
                 android:id="@+id/btn_regis_daftar"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
