--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -50,6 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="64dp"
         android:text="@string/perpustakaan_universitas_mulawarman"
+        android:fontFamily="@font/montserrat_regular"
         android:textColor="@color/colorYellowLight"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
