--- a/app/src/main/res/layout/bottom_nav.xml
+++ b/app/src/main/res/layout/bottom_nav.xml
@@ -7,7 +7,9 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nav"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:theme="@style/Widget.BottomNavigationView"
+        android:layout_height="50dp"
+        app:labelVisibilityMode="unlabeled"
         android:background="#fff"
         app:menu="@menu/bottom_menu"
         android:elevation="10dp"/>
