--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -153,24 +153,36 @@
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
+       <ProgressBar
+           android:id="@+id/pb_home_book"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
+           app:layout_constraintEnd_toEndOf="parent"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toBottomOf="@+id/textView9"
+           />
+
        <ScrollView
+           android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
-           tools:layout_editor_absoluteX="33dp">
+           tools:layout_editor_absoluteX="33dp"
+           >
 
 
-                  <androidx.recyclerview.widget.RecyclerView
-                      android:id="@+id/rv_home_book"
-                      android:layout_width="match_parent"
-                      android:layout_height="0dp"
-                      android:layout_marginStart="8dp"
-                      android:layout_marginTop="8dp"
-                      android:layout_marginEnd="8dp"
-                      tools:listitem="@layout/item_book_home" />
+           <androidx.recyclerview.widget.RecyclerView
+               android:id="@+id/rv_home_book"
+               android:layout_width="match_parent"
+               android:layout_height="0dp"
+               android:layout_marginStart="8dp"
+               android:layout_marginTop="8dp"
+               android:layout_marginEnd="8dp"
+               tools:listitem="@layout/item_book_home" />
        </ScrollView>
 
 
