--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -3,21 +3,21 @@
     <item
         android:id="@+id/menu_home"
         android:title="@string/home"
-        android:icon="@drawable/home"
+        android:icon="@drawable/ic_home"
         />
     <item
         android:id="@+id/menu_book"
         android:title="@string/buku"
-        android:icon="@drawable/notebook"
+        android:icon="@drawable/ic_book"
         />
     <item
         android:id="@+id/menu_rekomendasi"
         android:title="@string/rekomendasi"
-        android:icon="@drawable/heart"
+        android:icon="@drawable/ic_star"
         />
     <item
         android:id="@+id/menu_user"
         android:title="@string/home"
-        android:icon="@drawable/user"
+        android:icon="@drawable/ic_user"
         />
 </menu>
