fix bug registrasi

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -7,6 +7,13 @@
     tools:context=".activity.ChangePasswordActivity"
     android:background="@color/colorOrange">
 
+    <include
+        android:id="@+id/emptyToolbar"
+        layout="@layout/toolbar_empty"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="400dp"
@@ -16,26 +23,21 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/emptyToolbar">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:gravity="center"
             android:orientation="vertical"
-            android:padding="16dp"
-            android:gravity="center">
+            android:padding="16dp">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="UBAH PASSWORD"
-                android:fontFamily="@font/montserrat_bold"
-                android:textColor="@android:color/black"/>
+
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/old_pass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:id="@+id/old_pass"
                 app:errorEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -48,9 +50,9 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/new_pass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/new_pass"
                 app:errorEnabled="true">
 
                 <TextView
@@ -69,13 +71,13 @@
                     android:hint="@string/password_baru"
                     android:inputType="textPassword"
 
-                    android:textSize="12sp"/>
+                    android:textSize="12sp" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/confirm_pass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/confirm_pass"
                 app:errorEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -88,7 +90,6 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <Button
-                android:foreground="?attr/selectableItemBackground"
                 android:id="@+id/btn_update_pass"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
@@ -96,8 +97,10 @@
                 android:layout_marginTop="32dp"
                 android:background="@color/colorOrange"
                 android:fontFamily="@font/montserrat_bold"
+                android:foreground="?attr/selectableItemBackground"
                 android:text="Simpan"
                 android:textColor="@android:color/white" />
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
