--- a/app/src/main/res/layout/activity_change_profile.xml
+++ b/app/src/main/res/layout/activity_change_profile.xml
@@ -7,6 +7,7 @@
     android:id="@+id/change_profile"
     tools:context=".activity.ChangeProfileActivity">
 
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout3"
         android:layout_width="match_parent"
@@ -16,6 +17,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <include
+            android:id="@+id/emptyToolbar"
+            layout="@layout/toolbar_empty"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab_image"
             android:layout_width="50dp"
@@ -27,17 +34,17 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/image_upload"
-            android:layout_width="110dp"
-            android:layout_height="110dp"
-            android:layout_marginTop="16dp"
-            android:src="@drawable/bg_detail"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/empty_user"
             app:civ_border_color="@android:color/white"
             app:civ_border_width="2dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toBottomOf="@+id/emptyToolbar"
+            app:layout_constraintVertical_bias="0.0"
+            tools:src="@tools:sample/avatars" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.cardview.widget.CardView
